# findmytakeover

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  PUBLISHING.md  README.md  findmytakeover.config  findmytakeover.py  pyproject.toml  requirements.txt  test_dangling.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docker.yml  publish.yml
collector/: __init__.py  aws.py  cloudflare.py  gcp.py  msazure.py  oracle.py
skills/dangling-dns-finder/: SKILL.md
skills/dangling-dns-finder/scripts/: audit_a_inventory.sh  build_delete_batch.sh  find_dangling.sh  lib.sh  selftest.sh
tests/: test-awsazuregcp.config  test_dangling.py
