[project]
name = "findmytakeover"
version = "1.0.0"
description = "Detect dangling DNS records vulnerable to subdomain takeover across AWS, GCP, and Azure."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Anirudh Biyani" }]

dependencies = [
    "click==8.4.1",
    "PyYAML==6.0.3",
    "pandas==3.0.3",
    "boto3==1.43.14",
    "google-cloud-dns==0.37.0",
    "google-auth==2.53.0",
    "google-cloud-resource-manager==1.17.0",
    "google-cloud-storage==3.10.1",
    "google-cloud-compute==1.47.0",
    "google-cloud-functions==1.23.0",
    "azure-mgmt-dns==9.0.0",
    "azure-identity==1.25.3",
    "azure-mgmt-resource==25.0.0",
    "azure-mgmt-subscription==3.1.1",
    "azure-mgmt-network==30.2.0",
    "azure-mgmt-cdn==13.1.1",
    "azure-mgmt-trafficmanager==1.1.0",
    "azure-mgmt-web==11.0.0",
    "azure-mgmt-storage==25.0.0",
    "azure-mgmt-apimanagement==5.0.0",
    "azure-mgmt-search==9.2.0",
    "azure-mgmt-containerinstance==10.1.0",
    "azure-mgmt-containerregistry==15.0.0",
    "azure-mgmt-redis==14.5.0",
    "azure-mgmt-sql==3.0.1",
]

[project.scripts]
findmytakeover = "findmytakeover:main"

[project.urls]
Homepage = "https://github.com/anirudhbiyani/findmytakeover"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["findmytakeover"]
packages = ["collector"]
